--- a/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
+++ b/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
@@ -1,8 +1,6 @@
 .navbar-header-static-top
 {
-position:top;
 width:100%;
-height:13.5%;
 
 }
 
@@ -17,7 +15,7 @@ color: #F4F3E9;
 }
 .navbar-header-link-color
 {
-color:#FFFFFC;
+color:#5e5e56;
 }
 .navbar-header-link-hover-color
 {
