--- a/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
+++ b/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
@@ -37,10 +37,7 @@ color: #fff;
 {
 color: #FFFFFC;
 }
-.logo-responsive
-{
-max-width: 100%;
-}
+
 
 .home-hero-bg
 {
@@ -64,5 +61,9 @@ background-repeat: no-repeat;
 .home-hero-lefttext-removepadding
 {
 	padding:0px;
+}
+.theme-dropdown-icon {
+    width:30px;
+    padding:8px;
 }
 
