--- a/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
+++ b/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
@@ -5,15 +5,19 @@ width:100%;
 
 }
 
-.container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header
-{
-	margin-left: 0px;
-}
+
 .navbar-header-bg_col
 {
-background-color: rgba(102, 102, 102, 0.2);
+background-image: url(../images/bg_img.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+
+background-color: rgba(102,102,102,0.5);
+background-blend-mode: multiply;
+	
+
 margin-bottom: 0px;
-border-color:#ffffff;
+border-color:transparent;
 }
 .navbar-header-border-color
 {
@@ -30,13 +34,16 @@ color:#FFF;
 
 .dropdown-box-color 
 {
-background-color:#9A9777;
+background-color:transparent;
 }
 
+.navbar-inverse .navbar-nav>li>a {
+color:#FFFFFF;
+}
 .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover
 {
 color: #fff;
-    background-color: #9A9777;
+    background-color:rgba(102,102,102,0.66);;
 }
 .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover
 {
@@ -49,6 +56,8 @@ color: #FFFFFC;
 background-image:url(../images/bg_img.jpg);
 background-repeat: no-repeat;
     background-size: cover;
+	background-color: rgba(102,102,102,0.2);
+background-blend-mode: multiply;
 }
 .home-hero-lefttext-container
 {
@@ -77,8 +86,8 @@ background-repeat: no-repeat;
 	overflow-x: hidden;
 	padding: 0px;
 }
-.navbar-inverse {border-color:;
-border-color:#CDCCB9;
+.navbar-inverse {
+border-radius:0px;
    }
    .navbar-inverse .navbar-toggle {
     border-color: #CDCCB9;
@@ -90,6 +99,13 @@ border-color:#CDCCB9;
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     border-color: #ffffff;
 }
-.navbar-inverse .navbar-nav .open .dropdown-menu .divider {
-    background-color: #ffffff; 
+
+
+
+.navbar-inverse .navbar-nav .open .dropdown-menu li a:hover{
+
+background-color:#357774;
+color:#FFFFFF;
 }
+
+
