--- a/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
+++ b/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
@@ -25,7 +25,7 @@ color: #F4F3E9;
 }
 .navbar-header-link-color
 {
-color:#5e5e56;
+color:#FFFFFF;
 }
 .navbar-header-link-hover-color
 {
@@ -49,6 +49,7 @@ color: #fff;
 {
 color: #FFFFFC;
 }
+
 
 
 .home-hero-bg
@@ -99,7 +100,10 @@ border-radius:0px;
 .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
     border-color: #ffffff;
 }
-
+.dropdown-menu>li>a {
+font-weight:300;
+color:#FFFFFF;
+}
 
 
 .navbar-inverse .navbar-nav .open .dropdown-menu li a:hover{
@@ -109,3 +113,10 @@ color:#FFFFFF;
 }
 
 
+*
+{
+    box-sizing: border-box;
+    
+	
+    padding-left: inherit;
+}
