--- a/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
+++ b/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
@@ -132,7 +132,7 @@ font-weight:300;
     font-size:15px;
 }
 .about-center-block{
-    margin-left: 8%;
+    margin-left: 1%;
         width: 100%;
     margin-top: 5%;
 }
@@ -161,4 +161,17 @@ font-weight:300;
 .container-fluid>.navbar-collapse, .container-fluid>.navbar-header, .container>.navbar-collapse, .container>.navbar-header {
     margin-right: 0px;
     margin-left: 0px;
+}
+.videoWrapper {
+	position: relative;
+	padding-bottom: 25.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
