--- a/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
+++ b/startbootstrap-modern-business-gh-pages/css/ncbs-responsive.css
@@ -1,13 +1,16 @@
-@media (max-width: 767px)
-.navbar-inverse .navbar-nav .open .dropdown-menu .divider {
-    background-color: #FFFFFF;
-}
 
+/*CSS for body*/
 body{
     overflow-x: hidden;
     padding: 0px;
     background-color:#f4f3e9;  
     font-family: 'Roboto', sans-serif;
+    text-align: justify;
+}
+/*CSS for header*/
+@media (max-width: 767px)
+.navbar-inverse .navbar-nav .open .dropdown-menu .divider {
+    background-color: #FFFFFF;
 }
 
 .navbar-inverse {
@@ -100,8 +103,16 @@ body{
     font-size:15px;
 }
 
+/*CSS for home container*/
 .home-hero-bg{
     background: linear-gradient(215deg, #aed7d3 10%, rgba(99,133,133,1) 100%);
+    background: -moz-linear-gradient(276deg, #aed7d3 10%, rgba(99,133,133,1) 100%);  ff3.6+ /
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #aed7d3), color-stop(100%, rgba(99,133,133,1))); / safari4+,chrome /
+background: -webkit-linear-gradient(276deg, #aed7d3 10%, rgba(99,133,133,1) 100%); / safari5.1+,chrome10+ /
+background: -o-linear-gradient(276deg, #aed7d3 10%, rgba(99,133,133,1) 100%); / opera 11.10+ /
+background: -ms-linear-gradient(276deg, #aed7d3 10%, rgba(99,133,133,1) 100%); / ie10+ /
+background: linear-gradient(180deg, #aed7d3 10%, rgba(99,133,133,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aed7d3', endColorstr='#638585',GradientType=0 ); / ie6-9 
 }
 
 .home-hero-lefttext-container{
@@ -129,6 +140,7 @@ body{
 .panel-background{
     background-color: transparent;
 }
+/*CSS for About block*/
 
 .about-center-block{
     margin-left: 1%;
@@ -170,6 +182,7 @@ body{
     width:100%;
     height:200px;
 }
+/*CSS for footer*/
 
 .footer-content-text
 {
@@ -187,3 +200,11 @@ body{
     padding: 15px;
     border-top: solid 1px #ffffff;
 }
+footer
+{
+
+    text-align: -webkit-center;
+
+}
+
+
