--- a/css/ncbs-responsive.css
+++ b/css/ncbs-responsive.css
@@ -177,15 +177,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aed7d3', end
 }
 
 .home-hero-lefttext-container{
-	margin-top: 10px;
+    margin-top: 10px;
     background-color: rgba(102, 102, 102, 0.2);
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
     color: #f2f2f2;
     padding: 15px;
     border-radius: 0px;
-	
+    
 }
+
 
 .home-hero-lefttext-removepadding h3 {
 	padding:0px;
@@ -275,18 +276,22 @@ footer
 }
 
 
-@media (min-width: 992px)
-{
-    .theme-insect-image
-    {
-        margin-top: 35%;
-    }
-}
-
-@media (min-width: 1020px)
-{
+ @media only screen and (max-width: 1200px) 
+ {
     .theme-insect-image
     {
         margin-top: 15%;
     }
+    
 }
+
+ @media only screen and (max-width: 992px) 
+ {
+    .theme-insect-image
+    {
+        margin-top: 0%;
+    }
+    
+}
+
+ 
