--- a/css/ncbs-responsive.css
+++ b/css/ncbs-responsive.css
@@ -1,12 +1,27 @@
 
 /*CSS for body*/
-body{
+body {
     overflow-x: hidden;
     padding: 0px;
-    background-color:#f4f3e9;  
-    font-family: 'Roboto', sans-serif;
-    text-align: justify;
+    background-color:  rgba(176, 241, 239, 0.2);
+    /* background-color:#f4f3e9;  */
+     font-family: 'Roboto', sans-serif;
+     text-align: justify;
 }
+
+/* anchor links */
+a {
+    color: #a65c21;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #ffaa65;
+    font-weight: bold;
+    text-decoration: none;
+}
+/* anchor links END*/
 /*CSS for header*/
 @media (max-width: 767px)
 .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
@@ -18,9 +33,14 @@ body{
 }
 
 .navbar-header-bg_col{
-    background-image: url(../images/bg_img.jpg);
+    /*background-image: url(../images/bg_img.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover;*/
+    background: #50C9C3; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #50C9C3 , #96DEDA); /* Chrome 10-25, Safari 5.1-6 */
+    background: -moz-linear-gradient(to left, #50C9C3 , #96DEDA);   /* For Firefox (3.6 to 15) */
+    background-image: -o-linear-gradient(to left, #50C9C3 , #96DEDA); /* For old Opera (11.1 to 12.0) */
+    background: linear-gradient(to left, #50C9C3 , #96DEDA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
     background-color: rgba(102,102,102,0.5);
     background-blend-mode: multiply;
@@ -114,13 +134,7 @@ background-position: 0 -25px;
 
 
 
-body
-{
-	overflow-x: hidden;
-	padding: 0px;
-     background-color:#f4f3e9;  
-     font-family: 'Roboto', sans-serif;
-}
+
 
 .navbar-inverse {
 border-radius:0px;
@@ -154,7 +168,7 @@ font-size:16px;
 
 .navbar-inverse .navbar-nav .open .dropdown-menu li a:hover{
 
-    background-color:#357774;
+    background-color:rgba(172, 176, 175, 0.5);
     color:#FFFFFF;
     font-weight:600;
     font-size:16px;
@@ -175,14 +189,20 @@ background-position: 0 -25px;
 
 /*CSS for home container*/
 .home-hero-bg{
-    background: linear-gradient(215deg, #aed7d3 10%, rgba(99,133,133,1) 100%);
+    background: #50C9C3; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #50C9C3 , #96DEDA); /* Chrome 10-25, Safari 5.1-6 */
+    background: -moz-linear-gradient(to left, #50C9C3 , #96DEDA);   /* For Firefox (3.6 to 15) */
+    background-image: -o-linear-gradient(to left, #50C9C3 , #96DEDA); /* For old Opera (11.1 to 12.0) */
+    background: linear-gradient(to left, #50C9C3 , #96DEDA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    /*background: linear-gradient(215deg, #aed7d3 10%, rgba(99,133,133,1) 100%);
     background: -moz-linear-gradient(276deg, #aed7d3 10%, rgba(99,133,133,1) 100%);  ff3.6+ /
 background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #aed7d3), color-stop(100%, rgba(99,133,133,1))); / safari4+,chrome /
 background: -webkit-linear-gradient(276deg, #aed7d3 10%, rgba(99,133,133,1) 100%); / safari5.1+,chrome10+ /
 background: -o-linear-gradient(276deg, #aed7d3 10%, rgba(99,133,133,1) 100%); / opera 11.10+ /
 background: -ms-linear-gradient(276deg, #aed7d3 10%, rgba(99,133,133,1) 100%); / ie10+ /
 background: linear-gradient(180deg, #aed7d3 10%, rgba(99,133,133,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aed7d3', endColorstr='#638585',GradientType=0 ); / ie6-9 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aed7d3', endColorstr='#638585',GradientType=0 ); / ie6-9 */
 }
 
 .home-hero-lefttext-container{
@@ -213,45 +233,21 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aed7d3', end
     background-color: transparent;
 }
 /*CSS for About block*/
-
-.about-center-block{
-    margin-left: 1%;
-    width: 100%;
-    margin-top: 5%;
-}
-
-.about-text-style{
-    margin-top:-15px; 
-    font-family: 'Roboto', sans-serif;
-}
-
-.videoWrapper {
-	position: relative;
-	padding-bottom: 25.25%;/*16:9;*/  
-	padding-top: 25px;
-	height: 0;
-}
-
-.videoWrapper iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-
-
-.theme-about-heading {
-    margin-top: 30px;
+#about {
+    width:60%;
+    color: rgba(17, 17, 17, 0.7);
+    font-size:16px;
 }
 
 .theme-about-video {
     /*margin-left: 8%;*/
     width: 100%;
-    margin-top: 5%;
-    margin-right:15px;
     height:100%;
+    padding:15px;
+}
+
+#about blockquote {
+    border-left: 5px solid #7de4e0;
 }
 
 @media (max-width:893px){
@@ -259,9 +255,22 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#aed7d3', end
         height:100px;
     }
 }
+
+/* Acknowledgements section*/
+.ack-section{
+    background-color: #539794;
+    color: #fff;
+}
+.ack-section .container {
+    width:60%;
+}
+
+/* Acknowledgements END */
+
+
 /*CSS for footer*/
 
-.footer-content-text
+/*.footer-content-text
 {
     cursor: pointer;     
     color: #333726;
@@ -282,7 +291,7 @@ footer
 
     text-align: -webkit-center;
 
-}
+}*/
 
 
  @media only screen and (max-width: 1200px) 
